--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,3 +72,23 @@
     font-weight: 500;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Aldo Pro Bold';
+    src: local('./../fonts/Aldo Pro Bold'), local('Aldo-Pro-Bold'),
+        url('./../fonts/AldoPro-Bold.woff2') format('woff2'),
+        url('./../fonts/AldoPro-Bold.woff') format('woff'),
+        url('./../fonts/AldoPro-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Aldo Pro Black';
+    src: local('Aldo Pro Black'), local('Aldo-Pro-Black'),
+        url('./../fonts/AldoPro-Black.woff2') format('woff2'),
+        url('./../fonts/AldoPro-Black.woff') format('woff'),
+        url('./../fonts/AldoPro-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
