--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@
 }
 
 .project-name {
-    font-family: 'Aldo Pro Light';
+    font-family: 'Aldo Pro Book';
     font-size: 5.25rem;
     font-style: italic;
 }
@@ -44,7 +44,7 @@
 }
 
 @font-face {
-    font-family: 'Aldo Pro Book';
+    font-family: 'Aldo Pro F';
     src: local('Aldo Pro Book'), local('Aldo-Pro-Book'),
         url('./../fonts/AldoPro-Book.woff2') format('woff2'),
         url('./../fonts/AldoPro-Book.woff') format('woff'),
