--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,7 +44,7 @@
 }
 
 @font-face {
-    font-family: 'Aldo Pro F';
+    font-family: 'Aldo Pro Book';
     src: local('Aldo Pro Book'), local('Aldo-Pro-Book'),
         url('./../fonts/AldoPro-Book.woff2') format('woff2'),
         url('./../fonts/AldoPro-Book.woff') format('woff'),
