--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,9 +14,9 @@
     <meta charset="UTF-8">
 
 {% seo %}
-    <meta property="og:image" content="https://raw.githubusercontent.com/burningwave/core/master/Burningwave-logo-only-flame.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/toolfactory/core/master/ToolFactory-logo-only-flame.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#e54d1d">
+    <meta name="theme-color" content="#183153">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
